--- a/package.json
+++ b/package.json
@@ -15,21 +15,22 @@
     "README.md"
   ],
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
     "@inc2734/add-custom-event": "^0.5.0",
-    "@rollup/plugin-babel": "^5.2.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-babel": "^5.2.2",
+    "@rollup/plugin-node-resolve": "^11.0.1",
     "@wordpress/browserslist-config": "^2.7.0",
-    "autoprefixer": "^9.8.6",
-    "browser-sync": "^2.26.12",
-    "browserslist": "^4.14.1",
+    "autoprefixer": "^10.1.0",
+    "browser-sync": "^2.26.13",
+    "browserslist": "^4.16.0",
     "cssnano": "^4.1.10",
-    "node-sass": "^4.14.1",
+    "node-sass": "^5.0.0",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^7.1.2",
+    "postcss": "^8.2.1",
+    "postcss-cli": "^8.3.1",
     "rimraf": "^3.0.2",
-    "rollup": "^2.26.10",
+    "rollup": "^2.35.1",
     "rollup-plugin-uglify": "^6.0.4"
   },
   "scripts": {
