--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "clean:css": "rimraf dist/css && mkdir -p dist/css",
     "clean:zip": "rimraf spider.zip",
     "js": "npm run clean:js && rollup -c",
-    "css": "npm run clean:js && node-sass src/css/spider.scss dist/css/spider.css && postcss -r dist/css/spider.css -c=postcss.config.js",
+    "css": "npm run clean:css && node-sass src/css/spider.scss dist/css/spider.css && postcss -r dist/css/spider.css -c=postcss.config.js",
     "docs:clean:js": "rimraf docs/dist/js && mkdir -p docs/dist/js",
     "docs:clean:css": "rimraf docs/dist/css && mkdir -p docs/dist/css",
     "docs:js": "npm run docs:clean:js && rollup -c docs/rollup.config.js",
