--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "engines": {
+    "node": ">=10.0.0",
+    "npm": ">=6.9.0 <7"
+  },
   "name": "@inc2734/spider",
   "version": "0.0.31",
   "author": "inc2734",
@@ -15,22 +19,22 @@
     "README.md"
   ],
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.4",
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
     "@inc2734/add-custom-event": "^0.5.0",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-node-resolve": "^13.0.6",
-    "@wordpress/browserslist-config": "^4.1.0",
-    "autoprefixer": "^10.4.0",
-    "browser-sync": "^2.27.7",
-    "browserslist": "^4.18.1",
-    "cssnano": "^5.0.12",
-    "node-sass": "^6.0.1",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@wordpress/browserslist-config": "^4.1.2",
+    "autoprefixer": "^10.4.7",
+    "browser-sync": "^2.27.10",
+    "browserslist": "^4.21.1",
+    "cssnano": "^5.1.12",
+    "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.4",
-    "postcss-cli": "^9.0.2",
+    "postcss": "^8.4.14",
+    "postcss-cli": "^10.0.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.60.1",
+    "rollup": "^2.75.7",
     "rollup-plugin-uglify": "^6.0.4"
   },
   "scripts": {
