--- a/package.json
+++ b/package.json
@@ -19,22 +19,22 @@
     "npm": ">=6.9.0 <7"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.6",
-    "@babel/preset-env": "^7.18.6",
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
     "@inc2734/add-custom-event": "^0.5.0",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@wordpress/browserslist-config": "^4.1.2",
-    "autoprefixer": "^10.4.7",
-    "browser-sync": "^2.27.10",
-    "browserslist": "^4.21.1",
-    "cssnano": "^5.1.12",
-    "node-sass": "^7.0.1",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@wordpress/browserslist-config": "^5.8.0",
+    "autoprefixer": "^10.4.13",
+    "browser-sync": "^2.27.11",
+    "browserslist": "^4.21.5",
+    "cssnano": "^5.1.14",
+    "node-sass": "^8.0.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.14",
-    "postcss-cli": "^10.0.0",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.75.7",
+    "postcss": "^8.4.21",
+    "postcss-cli": "^10.1.0",
+    "rimraf": "^4.1.2",
+    "rollup": "^3.12.0",
     "rollup-plugin-uglify": "^6.0.4"
   },
   "scripts": {
@@ -42,11 +42,11 @@
     "clean:js": "rimraf dist/js && mkdir -p dist/js",
     "clean:css": "rimraf dist/css && mkdir -p dist/css",
     "clean:zip": "rimraf spider.zip",
-    "js": "npm run clean:js && rollup -c",
+    "js": "npm run clean:js && rollup -c --bundleConfigAsCjs",
     "css": "npm run clean:css && node-sass src/css/spider.scss dist/css/spider.css && postcss -r dist/css/spider.css -c=postcss.config.js",
     "docs:clean:js": "rimraf docs/dist/js && mkdir -p docs/dist/js",
     "docs:clean:css": "rimraf docs/dist/css && mkdir -p docs/dist/css",
-    "docs:js": "npm run docs:clean:js && rollup -c docs/rollup.config.js",
+    "docs:js": "npm run docs:clean:js && rollup -c docs/rollup.config.js --bundleConfigAsCjs",
     "docs:css:general": "node-sass docs/src/css/general.scss docs/dist/css/general.css && postcss -r docs/dist/css/general.css -c=postcss.config.js",
     "docs:css:app": "node-sass docs/src/css/app.scss docs/dist/css/app.css && postcss -r docs/dist/css/app.css -c=postcss.config.js",
     "docs:css": "npm-run-all -p docs:css:*",
