--- a/package.json
+++ b/package.json
@@ -14,28 +14,31 @@
     "LICENSE",
     "README.md"
   ],
-  "engines": {
-    "node": ">=16.0.0",
-    "npm": ">=8 <9"
-  },
+	"engines": {
+		"node": ">=20.10.0",
+		"npm": ">=10.2.3"
+	},
+	"volta": {
+		"node": "20.11.1"
+	},
   "devDependencies": {
-    "@babel/core": "^7.23.7",
-    "@babel/preset-env": "^7.23.8",
+    "@babel/core": "^7.24.3",
+    "@babel/preset-env": "^7.24.3",
     "@inc2734/add-custom-event": "^0.5.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
-    "@wordpress/browserslist-config": "^5.32.0",
-    "autoprefixer": "^10.4.17",
+    "@wordpress/browserslist-config": "^5.37.0",
+    "autoprefixer": "^10.4.19",
     "browser-sync": "^3.0.2",
-    "browserslist": "^4.22.2",
-    "cssnano": "^6.0.3",
+    "browserslist": "^4.23.0",
+    "cssnano": "^6.1.2",
     "node-sass": "^9.0.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.33",
+    "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
     "rimraf": "^5.0.5",
-    "rollup": "^4.9.6"
+    "rollup": "^4.13.1"
   },
   "scripts": {
     "start": "npm run build",
